--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "puppeteer": "^24.30.0",
     "puppeteer-core": "^24.30.0"
   },
